--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <div class="details">
                     <h6>A Netflix Original film </h6>
                     <h5 id="gen">Thriller</h5>
-                    <h4>2021</h4>
+                    <h4 id="date">2021</h4>
                     <h3 id="rate"><span>IMDB</span><i class="bi bi-star-fill"></i> 9.6</h3>
                 </div>
                 <div class="btns">
