--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
                     <li>
                         <a href="#">Kids</a>
                     </li>
+                    <li>
+                        <a href="/movie.html">movie</a>
+                    </li>
                 </ul>
             </div>
             <div class="search_user">
