--- a/movie.html
+++ b/movie.html
@@ -1,98 +1,93 @@
 <!DOCTYPE html>
 <html lang="en">
-  <link
-    rel="stylesheet"
-    href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
-  />
-  <link rel="stylesheet" href="style.css" />
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>movies</title>
-  </head>
-  <body class="bodd">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="style.css">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <header>
+        <video src="video/theboys.mp4" autoplay muted></video>
 
-  <div class="header3">
-    <nav class="nav">
-        <a href="#" class="nav_logo">MovieApp</a>
-  
-        <ul class="nav_items">
-          <li class="nav_item">
-            <a href="#" class="nav_link">Home</a>
-            <a href="#" class="nav_link">Home</a>
-            <a href="#" class="nav_link">Home</a>
-            <a href="#" class="nav_link">Home</a>
-          </li>
-        </ul>
-  
-        <button class="button">Login</button>
-      </nav>
-  </div>
+        <nav>
+            <div class="logo_ul">
+                <img src="image/logo.jpg" alt="">
+                <ul>
+                    <li>
+                        <a href="/">Home</a>
+                    </li>
+                    <li>
+                        <a href="#" id="series">Series</a>
+                    </li>
+                    <li>
+                        <a href="#" id="movies">Movies</a>
+                    </li>
+                    <li>
+                        <a href="#">Kids</a>
+                    </li>
+                    <li>
+                        <a href="/movie.html">movie</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="search_user">
+                    <input type="text" placeholder="Search..." id="search_input">
+                    <img src="image/user.jpg " alt="">
+                    <div class="search">
+                        <!-- <a href="#" class="card">
+                            <img src="image/the boys.jpg" alt="">
+                            <div class="cont">
+                                <h3>The Boys</h3>
+                                <p>Action, 2021 , <span>IMDB</span><i class="bi bi-star-fill"></i> 9.6</p>
+                            </div>
+                        </a> -->
+            
 
-  <!-- Home -->
-  <section class="home">
-    <div class="form_container">
-    <i class="bi bi-x form_close"></i>
-        <!-- login Form -->
-        <div class="form login_form">
-            <form action="#">
-                <h2>Login</h2>
-                <div class="input_box">
-                    <input type="email" placeholder="Enter your email" required>
-                    <i class="bi bi-envelope-at email"></i>
+                    </div>
+            </div>
+        </nav>
+        <div class="content">
+                <h1 id="title">Money Heist</h1>
+                <p>A criminal mastermind who goes by "The Professor" has a plan to pull off the 
+                    biggest heist in recorded history -- to print billions of euros in the Royal Mint of Spain.</p>
+                <div class="details">
+                    <h6>A Netflix Original film </h6>
+                    <h5 id="gen">Thriller</h5>
+                    <h4 id="date">2021</h4>
+                    <h3 id="rate"><span>IMDB</span><i class="bi bi-star-fill"></i> 9.6</h3>
                 </div>
+                <div class="btns">
+                        <a href="#" id="play">Watch <i class="bi bi-play-fill"></i></a>
 
-                <div class="input_box">
-                    <input type="password" placeholder="Enter your password" required>
-                    <i class="bi bi-file-lock2-fill password"></i>
-                    <i class="bi bi-eye-slash pw_hide"></i>
+                        <a href="#" id="download_main"><i class="bi bi-cloud-arrow-down-fill"></i></a>
                 </div>
-
-                <div class="option_field">
-                    <span class="checkbox">
-                        <input type="checkbox" id="check">
-                        <label for="check">Remember me</label>
-                    </span>
-                    <a href="#" class="forgot">forget password</a>
-
-                </div>
-                <button class="button">Login Now</button>
-                <div class="login_signup">Don't have an account?<a href="#" id="signup">Signup</a></div>
-            </form>
         </div>
 
-        <!-- Signup -->
-        <div class="form signup_form">
-            <form action="#">
-                <h2>SignUP</h2>
-                <div class="input_box">
-                    <input type="email" placeholder="Enter your email" required>
-                    <i class="bi bi-envelope-at email"></i>
-                </div>
+        <section>
+            <h4>Popular </h4>
+            <i class="bi bi-chevron-left"></i>
+            <i class="bi bi-chevron-right"></i>
+            <div class="cards">
+                <!-- <a href="#" class="card"> -->
+                    <!-- <img src="image/user.jpg" alt="" class="poster">
+                    <div class="rest_card">
+                        <img src="image/the boys.jpg" alt="">
+                        <div class="cont">
+                            <h4>The Boys</h4>
+                            <div class="sub">
+                                <p>Action, 2022</p>
+                                <h3><span>IMDB</span><i class="bi bi-star-fill"></i> 9.6</h3>
+                            </div>
+                        </div>
+                    </div> -->
+                <!-- </a> -->
 
-                <div class="input_box">
-                    <input type="password" placeholder="Create  password" required>
-                    <i class="bi bi-file-lock2-fill password"></i>
-                    <i class="bi bi-eye-slash pw_hide"></i>
-                </div>
+            </div>
+        </section>
 
-                <div class="input_box">
-                    <input type="password" placeholder="Confirm  your password" required>
-                    <i class="bi bi-file-lock2-fill password"></i>
-                    <i class="bi bi-eye-slash pw_hide"></i>
-                </div>
-
-             
-                <button class="button">Signup Now</button>
-                <div class="login_signup">Already have an account?<a href="#" id="signup">Login</a></div>
-            </form>
-        </div>
-
-    </div>
-
-  </section>
-
-
+    </header>
     <script src="app.js"></script>
-  </body>
+</body>
 </html>
