--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
       <nav class="nav">
         <a href="index.html" class="nav_logo">MovieApp</a>
 
-        <ul class="nav_items">
+        <!-- <ul class="nav_items">
           <li class="nav_item">
             <a href="#" class="nav_link">Home</a>
             <a href="#" class="nav_link">Home</a>
             <a href="#" class="nav_link">Home</a>
             <a href="#" class="nav_link">Home</a>
           </li>
-        </ul>
+        </ul> -->
 
         <button class="buttonLogin">Login</button>
       </nav>
