--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body class="bodd">
     <div class="header3">
       <nav class="nav">
-        <a href="index.html" class="nav_logo">MovieApp</a>
+        <a href="" class="nav_logo">MovieApp</a>
 
         <!-- <ul class="nav_items">
           <li class="nav_item">
@@ -29,6 +29,8 @@
     </div>
     <!-- Home -->
     <section class="home">
+          <video src="video/John Wick.mp4" autoplay muted></video>
+
       <!-- <input type="text" /> -->
 
       <div class="form_container" id="form_container">
