--- a/index.html
+++ b/index.html
@@ -29,7 +29,12 @@
     </div>
     <!-- Home -->
     <section class="home">
-          <video src="video/John Wick.mp4" autoplay muted></video>
+          <!-- <video src="video/John Wick.mp4" autoplay muted></video> -->
+
+          <video playsinline autoplay muted loop poster="polina.jpg" id="bgvid">
+            <source src="video/John Wick.mp4" type="">
+            <!-- <source src="polina.mp4" type="video/mp4"> -->
+          </video>
 
       <!-- <input type="text" /> -->
 
