--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </div>
     <!-- Home -->
     <section class="home">
-          <!-- <video src="video/John Wick.mp4" autoplay muted></video> -->
+          <video src="video/John Wick.mp4" autoplay muted></video>
 
           <video playsinline autoplay muted loop poster="polina.jpg" id="bgvid">
             <source src="video/John Wick.mp4" type="">
@@ -89,7 +89,7 @@
 
             <div class="input_box">
               <input
-                type="password" name="Confirm-password"
+                type="password" name="passwordConfirm"
                 placeholder="Confirm  your password"
                 required
               />
