--- a/movie.html
+++ b/movie.html
@@ -16,7 +16,7 @@
                 <img src="image/logo.jpg" alt="">
                 <ul>
                     <li>
-                        <a href="/">Home</a>
+                        <a href="/the boys.html">Home</a>
                     </li>
                     <li>
                         <a href="#" id="series">Series</a>
