--- a/the boys.html
+++ b/the boys.html
@@ -19,7 +19,7 @@
           <img src="image/logo.jpg" alt="" />
           <ul>
             <li>
-              <a href="/">Home</a>
+              <a href="">Home</a>
             </li>
             <li>
               <a href="#" id="series">Series</a>
